Fixed #1818 related to an overlapping issue on ultra-narrow mobile devices. Also cleaned up the naming of SCSS include files so they properly identify the screen media type in the file name (rather than being inconsistent).

--- a/src/theme-gcwu-intranet/sass/theme.scss
+++ b/src/theme-gcwu-intranet/sass/theme.scss
@@ -30,7 +30,7 @@
 
 @media (min-width: 960px) and (min-device-width: 1024px) {
 /* ----- Large screens - All media types - Start of build includes ----- */
-@import '../../base/sass/default-large';
+@import '../../base/sass/default-large-screen';
 @import '../../theme-gcwu-fegc/sass/includes/default-large';
 @import '../../theme-gcwu-fegc/sass/includes/default-large-images';
 /* ----- Large screens - All media types - End of build includes ----- */
@@ -38,51 +38,58 @@
 
 @media screen and (min-width: 768px) and (min-device-width: 768px) {
 /* ----- Medium and large screens - Screen media type - Start of build includes ----- */
-@import '../../grids/sass/responsive-medium-large';
+@import '../../grids/sass/responsive-medium-large-screen';
 /* ----- Medium and large screens - Screen media type - End of build includes ----- */
 }
 
 @media screen and (min-width: 960px) and (min-device-width: 1024px) {
 /* ----- Large screens - Screen media type - Start of build includes ----- */
-@import '../../theme-gcwu-fegc/sass/includes/default-responsive-large';
-@import 'includes/default-responsive-large';
+@import '../../theme-gcwu-fegc/sass/includes/default-responsive-large-screen';
+@import 'includes/default-responsive-large-screen';
 @import '../../base/sass/default-large-screen';
 @import '../../theme-gcwu-fegc/sass/includes/default-large-screen';
 @import 'includes/default-large-screen';
-@import 'includes/default-large-screen-images';
+@import 'includes/default-large-images-screen';
 /* ----- Large screens - Screen media type - End of build includes ----- */
 }
 
 @media screen and (min-width: 1200px) and (min-device-width: 1024px) {
 /* ----- Large screens (1200+ pixel width) - Screen media type - Start of build includes ----- */
-@import '../../grids/sass/responsive-large-1200';
-@import '../../theme-gcwu-fegc/sass/includes/default-responsive-large-1200';
-@import 'includes/default-responsive-large-1200';
+@import '../../grids/sass/responsive-large-1200-screen';
+@import '../../theme-gcwu-fegc/sass/includes/default-responsive-large-1200-screen';
+@import 'includes/default-responsive-large-1200-screen';
 /* ----- Large screens (1200+ pixel width) - Screen media type - End of build includes ----- */
 }
 
 @media screen and (max-width: 959px), screen and (max-device-width: 1023px) {
 /* ----- Small and medium screens - Screen media type - Start of build includes ----- */
-@import '../../base/sass/default-small-medium';
-@import '../../theme-gcwu-fegc/sass/includes/default-small-medium';
-@import '../../theme-gcwu-fegc/sass/includes/default-small-medium-images';
-@import 'includes/default-small-medium';
+@import '../../base/sass/default-small-medium-screen';
+@import '../../theme-gcwu-fegc/sass/includes/default-small-medium-screen';
+@import '../../theme-gcwu-fegc/sass/includes/default-small-medium-images-screen';
+@import 'includes/default-small-medium-screen';
 /* ----- Small and medium screens - Screen media type - End of build includes ----- */
 }
 
 @media screen and (max-width: 767px), screen and (max-device-width: 767px) {
 /* ----- Small screens - Screen media type - Start of build includes ----- */
-@import '../../base/sass/default-small';
-@import '../../theme-gcwu-fegc/sass/includes/default-small';
+@import '../../base/sass/default-small-screen';
+@import '../../theme-gcwu-fegc/sass/includes/default-small-screen';
+@import 'includes/default-small-screen';
 /* ----- Small screens - Screen media type - End of build includes ----- */
+}
+
+@media screen and (max-width: 290px), screen and (max-device-width: 290px) {
+/* ----- Small screens (290 pixel width and under) - Screen media type - Start of build includes ----- */
+@import '../../theme-gcwu-fegc/sass/includes/default-small-290-screen';
+/* ----- Small screens (290 pixel width and under) - Screen media type - End of build includes ----- */
 }
 
 @media screen and (min-width: 768px) and (max-width: 959px), screen and (min-device-width: 768px) and (max-device-width: 1023px) {
 /* ----- Medium screens - Screen media type - Start of build includes ----- */
-@import '../../grids/sass/responsive-medium';
-@import '../../base/sass/default-medium';
-@import '../../theme-gcwu-fegc/sass/includes/default-medium';
-@import 'includes/default-medium';
+@import '../../grids/sass/responsive-medium-screen';
+@import '../../base/sass/default-medium-screen';
+@import '../../theme-gcwu-fegc/sass/includes/default-medium-screen';
+@import 'includes/default-medium-screen';
 /* ----- Medium screens - Screen media type - End of build includes ----- */
 }
 
